k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestion-produits-deployment
  namespace: payetonkawa-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gestion-produits
  template:
    metadata:
      labels:
        app: gestion-produits
    spec:
      containers:
      - name: gestion-produits-container
        image: registry.germainleignel.com/paye-ton-kawa/gestion-produits:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
