k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-produits
  namespace: payetonkawa-prod
spec:
  selector:
    app: db-produits
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
