k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestion-produits-service
  namespace: payetonkawa-prod
spec:
  selector:
    app: gestion-produits
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
